tests/Semantic/test_2_r03.out
Error type 3 at Line 6: redefine variable: ttt
