tests/Semantic/test_2_r03.spl
int test_2_r03()
{
  int ttt = 3;
  float iii = 0.3;
  float kkk = 1.2;
  float ttt = iii * kkk;
  return 0;
}
